fix: squares overflowing after the container

--- a/style.css
+++ b/style.css
@@ -5,13 +5,12 @@ body {
 }
 
 .container {
-    min-width: 700px;
-    min-height: 700px;
+    overflow: hidden;
     max-width: 700px;
     max-height: 700px;
     display: flex;
-}
 
+}
 .square {
     border: 2px solid black;
 }
